--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -3,7 +3,7 @@
   <head>
       <meta charset="UTF-8"/>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Welcome to gestbook2</title>
+      <title>Welcome to guestbook</title>
   </head>
   <body>
     <div id="navbar"></div>
@@ -11,7 +11,7 @@
       <section class="section">
         <div class="container is-fluid">
           <div class="content">
-            <h4 class="title">Welcome to gestbook2</h4>
+            <h4 class="title">Welcome to guestbook</h4>
             <p>If you're seeing this message, that means you haven't yet compiled your ClojureScript!</p>
             <p>Please run <code>lein figwheel</code> to start the ClojureScript compiler and reload the page.</p>
             <h4>For better ClojureScript development experience in Chrome follow these steps:</h4>
